Creato il go handler e le cartelle a se associate
